force-app/main/default/objects/Batch_Flow__c/Batch_Flow__c.object-meta.xml
<CustomObject>
    <label>Batch Flow</label>
    <nameField>
        <label>Batch Flow Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Batch Flows</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>