force-app/main/default/objects/Batch_Flow__c/fields/ActivateNumberOfErrors__c.field-meta.xml
<CustomField>
    <fullName>ActivateNumberOfErrors__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ActivateNumberOfErrors</label>
    <type>Checkbox</type>
</CustomField>