force-app/main/default/objects/Batch_Flow__c/fields/AsyncApexJobId__c.field-meta.xml
<CustomField>
    <fullName>AsyncApexJobId__c</fullName>
    <label>AsyncApexJobId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>