force-app/main/default/objects/Batch_Flow__c/fields/Batch_Flow_Group__c.field-meta.xml
<CustomField>
    <fullName>Batch_Flow_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Batch Flow Group</label>
    <referenceTo>Batch_Flow_Group__c</referenceTo>
    <relationshipLabel>Batch Flows</relationshipLabel>
    <relationshipName>Batch_Flows</relationshipName>
    <type>Lookup</type>
</CustomField>