force-app/main/default/objects/Batch_Flow__c/fields/Dependent_Jobs__c.field-meta.xml
<CustomField>
    <fullName>Dependent_Jobs__c</fullName>
    <label>Dependent Jobs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>