force-app/main/default/objects/Batch_Flow__c/fields/Emails__c.field-meta.xml
<CustomField>
    <fullName>Emails__c</fullName>
    <label>Emails</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>