force-app/main/default/objects/Batch_Flow__c/fields/Job_Summary_Email_Subject__c.field-meta.xml
<CustomField>
    <fullName>Job_Summary_Email_Subject__c</fullName>
    <label>Job Summary Email Subject</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>