force-app/main/default/objects/Batch_Flow__c/fields/Monitor_Jobs__c.field-meta.xml
<CustomField>
    <fullName>Monitor_Jobs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Monitor Jobs</label>
    <type>Checkbox</type>
</CustomField>