force-app/main/default/objects/Batch_Flow__c/fields/Multiple_Dependency__c.field-meta.xml
<CustomField>
    <fullName>Multiple_Dependency__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Multiple Dependency</label>
    <type>Checkbox</type>
</CustomField>