force-app/main/default/objects/Batch_Flow__c/fields/Next_Job__c.field-meta.xml
<CustomField>
    <fullName>Next_Job__c</fullName>
    <label>Next Job</label>
    <length>255</length>
    <type>Text</type>
</CustomField>