force-app/main/default/objects/Batch_Flow__c/fields/Next_Jobs__c.field-meta.xml
<CustomField>
    <fullName>Next_Jobs__c</fullName>
    <label>Next Jobs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>