force-app/main/default/objects/Batch_Flow__c/fields/Next_Scheduled_Run__c.field-meta.xml
<CustomField>
    <fullName>Next_Scheduled_Run__c</fullName>
    <label>Next Scheduled Run</label>
    <type>DateTime</type>
</CustomField>