force-app/main/default/objects/Batch_Flow__c/fields/Preferred_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Start_Time__c</fullName>
    <label>Preferred Start Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>