force-app/main/default/objects/Batch_Flow__c/fields/Preferred_Start_Time_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Start_Time_Minutes__c</fullName>
    <label>Preferred Start Time Minutes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>