force-app/main/default/objects/Batch_Flow__c/fields/Run_Increment__c.field-meta.xml
<CustomField>
    <fullName>Run_Increment__c</fullName>
    <label>Run Increment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>