force-app/main/default/objects/Batch_Flow__c/fields/Send_Job_Summary__c.field-meta.xml
<CustomField>
    <fullName>Send_Job_Summary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Job Summary</label>
    <type>Checkbox</type>
</CustomField>