force-app/main/default/objects/Batch_Flow__c/fields/Un_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Un_Scheduled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Un Scheduled</label>
    <type>Checkbox</type>
</CustomField>